--- a/_config.yml
+++ b/_config.yml
@@ -77,4 +77,6 @@ theme: landscape
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repo: git@github.com/st253625445/st253625445.github.io.git
+  branch: master
